--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if current_account %>
+          <li><%= link_to 'Create a new post', new_article_path %></li>
           <li style="padding-top: 15px; color: white;">Welcome, <%= current_account.username %></li>
           <li><%= link_to 'Logout', session_path(' '), method: :delete %></li>
         <% else %>
