Fixed a couple of stuff

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,3 +17,16 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.description {
+  height: 450px;
+  width: 600px;
+}
+
+.text-box {
+  width: 600px;
+}
+
+.center-content {
+  text-align: center;
+}
