--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Update thread: </h1>
-<%= render 'form' %>
+<div class="center-content">
+  <h1>Update thread: </h1>
+  <%= render 'form' %>
+</div>
