--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,9 @@
   Created: <%= @article.created_at.strftime("%m/%d/%Y") %> by <%= @article.account %>
 </p>
 
-<h2> <%= @article.description %> </h2>
-<% if current_account %>
+<h3> <%= @article.description %> </h3>
+<% if current_account == @article.id %>
+  <%= link_to 'EDIT POST', article_edit_path %>
+  <br>
   <%= link_to 'DELETE POST', article_path, method: :delete, data: { confirm: "Are you sure? This action cannot be reverted." } %>
 <% end %>
