--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Create a new thread: </h1>
-<%= render 'form' %>
+<div class="center-content">
+  <h1>Create a new thread: </h1>
+  <%= render 'form' %>
+
+</div>
