--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,16 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <a class="navbar-brand" href="<% root_path %>">GA-dit</a>
     </div>
-
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="<%= "active" if params[:controller] == "accounts" && params[:action] == "index" %>"><%= link_to 'Home', root_path %></li>
+        <li class="<%= "active" if params[:controller] == "articles" && params[:action] == "index" %>"><%= link_to 'Home', root_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if current_account %>
