Got article author showing correctly

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,3 +30,21 @@
 .center-content {
   text-align: center;
 }
+
+.index-page {
+  height: 100px;
+}
+
+.upvote-button {
+  display: inline-block;
+}
+
+.upvote-counter {
+  padding-right: 15px;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+.arrows {
+  list-style: none;
+}
