--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,10 +2,26 @@
   <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
       <div class="panel-heading" role="tab" id="heading<%= article.id %>">
-        <h4 class="panel-title">
-          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse<%= article.id %>" aria-expanded="false" aria-controls="collapse<%= article.id %>">
-            <%= article.title %>
-          </a>
+        <h4 class="panel-title index-page" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse<%= article.id %>" aria-expanded="false" aria-controls="collapse<%= article.id %>">
+          <ul>
+            <li class="arrows">
+              <button type="button" class="btn btn-default" aria-label="Left Align">
+                <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+              </button>
+            </li>
+            <li class="upvote-button upvote-counter arrows">
+              <p>60</p>
+            </li>
+            <li class="upvote-button arrows">
+                <%= article.title %> by <%= article.account.username %>
+            </li>
+            <li class="arrows">
+              <button type="button" class="btn btn-default">
+                <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+              </button>
+            </li>
+          </ul>
+          &nbsp;&nbsp;
         </h4>
       </div>
       <div id="collapse<%= article.id %>" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading<%= article.id %>">
