add acts_as_votable gem
Also updates db seed and creates a vote tally method.

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
               </button>
             </li>
             <li class="upvote-button upvote-counter arrows">
-              <p><%= article.upvotes %></p>
+              <p><%= article.total_votes %></p>
             </li>
             <li class="upvote-button arrows">
                 <%= article.title %> by <%= article.account.username %>
