--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,10 +41,21 @@
 
 .upvote-counter {
   padding-right: 15px;
-  padding-left: 10px;
+  margin-left: 15px;
   padding-top: 10px;
+}
+
+.upvote-counter2 {
+  padding-right: 15px;
+  margin-left: 10px;
+  font-size: 35px;
 }
 
 .arrows {
   list-style: none;
+}
+
+.comments {
+  width: 500px;
+  height: 100px;
 }
