Add non functionion upvote buttons for comments

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
               <% end %>
             </li>
             <li class="upvote-button upvote-counter arrows">
-              <p><%= article.total_votes %></p>
+              <p><%= article.total_votes_article %></p>
             </li>
             <li class="upvote-button arrows">
                 <%#= "(Voted!)" if current_account.present? && current_account.voted_for?(article) %>
