--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,4 +1,5 @@
 <div class="center-content">
+  <img src="../../../aa.png" alt="LOGO" style="height:200px;">
   <h1>Sign up</h1>
   <%= form_for @account do |f| %>
     <% if @account.errors.any? %>
