--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,8 +6,14 @@
           <h4 class="panel-title index-page" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse<%= article.id %>" aria-expanded="false" aria-controls="collapse<%= article.id %>">
             <ul>
               <li class="arrows">
-                <%= link_to article_vote_path(article, vote: "up"), method: :patch, class: "btn btn-default", aria_label: "Left Align" do %>
-                    <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+                <% if current_account.voted_up_on? article %>
+                  <%= link_to article_vote_path(article, vote: "up"), method: :patch, class: "btn btn-warning", aria_label: "Left Align" do %>
+                      <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+                  <% end %>
+                <% else %>
+                  <%= link_to article_vote_path(article, vote: "up"), method: :patch, class: "btn btn-default", aria_label: "Left Align" do %>
+                      <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+                  <% end %>
                 <% end %>
               </li>
               <li class="upvote-button upvote-counter arrows">
@@ -18,8 +24,14 @@
                   <%= article.title %>
               </li>
               <li class="arrows">
-                <%= link_to article_vote_path(article, vote: "down"), method: :patch, class: "btn btn-default" do %>
-                  <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+                <% if current_account.voted_down_on? article %>
+                  <%= link_to article_vote_path(article, vote: "down"), method: :patch, class: "btn btn-warning", aria_label: "Left Align" do %>
+                      <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+                  <% end %>
+                <% else %>
+                  <%= link_to article_vote_path(article, vote: "down"), method: :patch, class: "btn btn-default", aria_label: "Left Align" do %>
+                      <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+                  <% end %>
                 <% end %>
               </li>
             </ul>
