--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="<% root_path %>"><a href="<% root_path %>"><img src="../../../aa.png" alt="LOGO" style="height:50px;"></a></a>
+      <a class="navbar-brand" href="/"><a href="/"><img src="../../../aa.png" alt="LOGO" style="height:50px;"></a></a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navigationbar">
