Remove cringy stock background, remove duplicate jquery, remove direct github dependencies

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<div style="background-image: url('https://newevolutiondesigns.com/images/freebies/black-white-background-8.jpg'); height: 710px;">
+<div>
   <% @articles.each do |article| %>
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
